RESOLVED FIXED250386
REGRESSION(258484@main): StreamClientConnection sends destination id in wrong format
https://bugs.webkit.org/show_bug.cgi?id=250386
Summary REGRESSION(258484@main): StreamClientConnection sends destination id in wrong...
Kimmo Kinnunen
Reported 2023-01-10 07:34:11 PST
REGRESSION(258484@main) StreamClientConnection sends destination id in wrong format Expected uint64_t (ObjectIdentifiers only) Sent: WTF::UInt128 Causes wrong message lengths and leads increase in SHOULD NEVER BE REACHED in IPC::StreamClientConnection::trySendDestinationIDIfNeeded See also bug 250318
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-10 07:34:24 PST
Kimmo Kinnunen
Comment 2 2023-01-10 09:47:45 PST
EWS
Comment 3 2023-01-11 05:00:22 PST
Committed 258782@main (ce70a7f574fc): <https://commits.webkit.org/258782@main> Reviewed commits have been landed. Closing PR #8465 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.