Cherry-pick ce70a7f574fc. rdar://problem/104076868

REGRESSION(258484@main): StreamClientConnection sends destination id in wrong format
    https://bugs.webkit.org/show_bug.cgi?id=250386
    rdar://104076868

    Reviewed by Alex Christensen.

    258484@main would change the IPC message destination ID to UInt128.
    The commit changed also stream IPC destinations as UInt128.

    Stream{Client,Server}Connection public API has only ObjectIdentifier<T> instances
    as the destination ID. These are uint64_t. Thus sending UInt128 when the
    input is only uint64_t is redundant.

    Revert back to uint64_t. The stream IPC memory format expects certain layout and alignment
    for messages and their fields. The UInt128 change didn't contain these.

    It is better to make the 128 bit change in isolation, should the need arise. Given
    that 64 bits is relatively big id space, try to preserve the perf benefit of using
    this smaller space until needed.

    * Source/WebKit/Platform/IPC/StreamClientConnection.h:
    (IPC::StreamClientConnection::trySendDestinationIDIfNeeded):
    * Source/WebKit/Platform/IPC/StreamServerConnection.cpp:
    (IPC::StreamServerConnection::startReceivingMessages):
    (IPC::StreamServerConnection::stopReceivingMessages):
    (IPC::StreamServerConnection::processSetStreamDestinationID):
    * Source/WebKit/Platform/IPC/StreamServerConnection.h:
    * Source/WebKit/WebProcess/WebPage/IPCTestingAPI.cpp:
    (WebKit::IPCTestingAPI::JSIPCStreamClientConnection::prepareToSendOutOfStreamMessage):

    Canonical link: https://commits.webkit.org/258782@main

Canonical link: https://commits.webkit.org/258608.19@safari-7615.1.18-branch